recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:12: error: type mismatch;
 found   : Int
 required: List[Int]
  return min(l.head)
               ^