recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  
	if (l == Nil)
  return l.head
  if(l.head < l.tail.head)
  return l.head
  else
  if(l.tail.head < l.head)
  return min(l.head::l.tail)
  else
  return min(l.head)

  
  
}